templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  # Adicione as configurações do Deployment aqui
