templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  # Adicione as configurações do Service aqui
